--- a/manual/sdlc.html
+++ b/manual/sdlc.html
@@ -242,9 +242,9 @@
                      <p>If any defect is found by the end user or customer while using the product in live environment it will be handled by the maintainance team.</p>
                      <h4>Types of SDLC</h4>
 
-                     <p>
-                        There are 2 types
-                       <ol>
+                     <p>There are 2 types</p>
+                       <p>
+                        <ol>
                             <li>Incremental</li>
                             <li>Iterative</li>
                         </ol>
