--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
     <div class="middle-image">
         <img src="./imagesliders/1.png" alt="">
     </div>
+    <div class="middle-home">
+        <h1>Software Testing Tutorials</h1>
+        <div class="underline">
+            
+        </div>
+        <h3>This tutorial for biginners like Manual Testing Concepts, Core Java, Selenium, TestiNG and FAQ's</h3>
+    </div>
     <!-- Footer Seciton Starts -->
     <footer class="footer-container">
         <div class="footer-center wrapper">
