--- a/manual/staticvsdynamic.html
+++ b/manual/staticvsdynamic.html
@@ -106,6 +106,10 @@
             </div>
             <div class="menucontent">
                     <h2>Difference between Static Testing and Dynamic Testing</h2>
+                    <p>Static testing is an approach to test project documents in the form of Reviews, Walkthroughs and Inspections. </p>
+
+                        <p> Dynamic testing is an approach to test the actual software by giving inputs and observing results.</p>
+                        </p>
                     <div class="arrows">
                         <div><a href="./testmeth.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./qavsqc.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
