--- a/manual/testmeth.html
+++ b/manual/testmeth.html
@@ -106,6 +106,22 @@
             </div>
             <div class="menucontent">
                     <h2>Testing Methodologies</h2>
+                    <h4>White Box Testing Technique</h4>
+                    <ol>
+                        <li>White Box Testing conducts on internal logic of the programs</li>
+                        <li>Programming Skills are required</li>
+                        <li>Ex. Unit Testing and Integration Testing</li>
+                    </ol>
+                    <h4>Black Box Testing Technique</h4>
+                    <ol>
+                        <li>Testing conducts on functionality of the application whether it is working according to customer requirements or not</li>
+                        <li>Ex: System Testing and UAT Testing</li>
+                    </ol>
+                    <h4>Grey Box Testing Technique</h4>
+                    <ol>
+                        <li>Both combination of white box and black box testing</li>
+                        <li>Ex: Database Testing</li>
+                    </ol>
                     <div class="arrows">
                         <div><a href="./vervsval.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./staticvsdynamic.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
