--- a/manual/vervsval.html
+++ b/manual/vervsval.html
@@ -106,7 +106,20 @@
             </div>
             <div class="menucontent">
                     <h2>Differences between Verification and Validation</h2>
-                    
+                    <img src="../Images/Manual_Images/verification-and-validation.webp" alt="">
+                    <p>
+                        <ol>
+                                <li>Verification process includes checking documents, design, code, and program, whereas Validation process includes testing and validation of the actual product.</li>
+                                <li>Verification does not involve code execution, while Validation involves code execution.</li>
+                                <li>Verification uses methods like reviews, walkthroughs, inspections, and desk-checking, whereas Validation uses methods like black box testing, white box testing, and non-functional testing.</li>
+                                <li>Verification checks whether the software confirms a specification, whereas Validation checks whether the software meets the requirements and expectations.</li>
+                                <li>Verification finds the bugs early in the development cycle, whereas Validation finds the bugs that verification can not catch.</li>
+                                <li>Comparing validation and verification in software testing, the Verification process targets software architecture, design, database, etc., while the Validation process targets the actual software product.</li>
+                                <li>Verification is done by the QA team, while Validation is done by the involvement of the testing team with the QA team.</li>
+                                <li>Comparing Verification vs Validation testing, the Verification process comes before validation, whereas the Validation process comes after verification.</li>
+                               
+                        </ol>
+                    </p>
                     <div class="arrows">
                         <div><a href="./vmodel.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./testmeth.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
