--- a/manual/vmodel.html
+++ b/manual/vmodel.html
@@ -159,6 +159,12 @@
                                <li style="margin-left: 30px;">Inspection will have a proper schedule which will be intimated via E-Mail to the concerned developer/ Tester.</li> 
                         </ol>
                     </p>
+                    <p><b> Validation checks whether we are building the product  right</b></p>
+                     <ol>
+                        <li>Takes place after verifications are completed.</li>
+                        <li>Focus on Software</li>
+                        <li>Validation typically involves actual testing - Unit Testing, Integration, System Testing, User Acceptance Testing</li>
+                     </ol>
                     <div class="arrows">
                         <div><a href="./waterfall.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./vervsval.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
