--- a/manual/qavsqc.html
+++ b/manual/qavsqc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/sidebar.css">
@@ -54,7 +54,7 @@
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -68,8 +68,7 @@
                         <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
                         <li><a href="./testmeth.html" class="nav-link">Testing Methodologies</a></li>
                         <li><a href="./staticvsdynamic.html" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
-                        <li><a href="./qavsqc.html" class="nav-link">Quality Assurance and Quality Control</a></li>
-                        <li><a href="./verificationtech.html" class="nav-link">Verification/Static Testing Techniques</a></li>
+                        <li><a href="./qavsqc.html" class="nav-link active">Quality Assurance and Quality Control</a></li>
                         <li><a href="./levelsoftest.html" class="nav-link">Levels of Testing</a></li>
                         <li><a href="./systemtesttech.html" class="nav-link">System Testing Techniques/Types</a></li>
                         <li><a href="./funcvsnonfunc.html" class="nav-link">Functional Vs Non Functional Testing</a></li>
@@ -105,14 +104,36 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Difference between Quality Assurance and Quality Control</h2>
+                    <table>
+                        <tr>
+                            <th>Quality Assurance</th>
+                            <th>Quality Control</th>
+                        </tr>
+                        <tr>
+                            <td>1. QA is process related</td>
+                            <td>1. QC is the actual testing of the software</td>
+                        </tr>
+                        <tr>
+                            <td>2. QA focuses on building in quality</td>
+                            <td>2. QC focuses on Testing for Quality</td>
+                        </tr>
+                        <tr>
+                            <td>3. QA is preventing defects</td>
+                            <td>3. QC is detecting defects</td>
+                        </tr>
+                        <tr>
+                            <td>4. QA is Process oriented</td>
+                            <td>4. QC is Product oriented</td>
+                        </tr>
+                        <tr>
+                            <td>5. QA for entire life cycle</td>
+                            <td>5. QC for testing part in SDLC</td>
+                        </tr>
+                    </table>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./staticvsdynamic.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./levelsoftest.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
@@ -138,7 +159,7 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -152,8 +173,7 @@
                         <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
                         <li><a href="./testmeth.html" class="nav-link">Testing Methodologies</a></li>
                         <li><a href="./staticvsdynamic.html" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
-                        <li><a href="./qavsqc.html" class="nav-link">Quality Assurance and Quality Control</a></li>
-                        <li><a href="./verificationtech.html" class="nav-link">Verification/Static Testing Techniques</a></li>
+                        <li><a href="./qavsqc.html" class="nav-link active">Quality Assurance and Quality Control</a></li>
                         <li><a href="./levelsoftest.html" class="nav-link">Levels of Testing</a></li>
                         <li><a href="./systemtesttech.html" class="nav-link">System Testing Techniques/Types</a></li>
                         <li><a href="./funcvsnonfunc.html" class="nav-link">Functional Vs Non Functional Testing</a></li>
