--- a/manual/staticvsdynamic.html
+++ b/manual/staticvsdynamic.html
@@ -106,8 +106,9 @@
             </div>
             <div class="menucontent">
                     <h2>Difference between Static Testing and Dynamic Testing</h2>
+                    <h4>Static Testing</h4>
                     <p>Static testing is an approach to test project documents in the form of Reviews, Walkthroughs and Inspections. </p>
-
+                    <h4>Dynamic Testing</h4>
                         <p> Dynamic testing is an approach to test the actual software by giving inputs and observing results.</p>
                         </p>
                     <div class="arrows">
