--- a/manual/7principles.html
+++ b/manual/7principles.html
@@ -110,8 +110,8 @@
                     <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
                     <p>4. To ensure the client about the completeness and correctness of the software application.</p>
                     <div class="arrows">
-                        <div><a href="./qaactivities.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href="./agilemodel.htmls"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./qaactivities.html">&#8592;Previous</a></div>
+                        <div><a href="./agilemodel.htmls">After &#8594;</a></div>
                     </div>
                     
             </div>
