--- a/manual/agilemodel.html
+++ b/manual/agilemodel.html
@@ -106,8 +106,8 @@
             <div class="menucontent">
                     <h2>Agile Model</h2>
                     <div class="arrows">
-                        <div><a href="./7principles.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href="./scrum.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./7principles.html">&#8592;Previous</a></div>
+                        <div><a href="./scrum.html">After &#8594;</a></div>
                     </div>
                     
             </div>
