--- a/manual/whatsoft.html
+++ b/manual/whatsoft.html
@@ -115,8 +115,8 @@
                     <h5>3. Application Software</h5>
                     <p>Ex. Web Applications, Mobile Apps, Desktop Applications.</p>
                     <div class="arrows">
-                        <div><a href="../manual.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href="./whattest.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="../manual.html">&#8592;Previous</a></div>
+                        <div><a href="./whattest.html">After &#8594;</a></div>
                     </div>
                     
             </div>
