--- a/manual/whybugs.html
+++ b/manual/whybugs.html
@@ -116,8 +116,8 @@
                         </ol>
                     </p>
                     <div class="arrows">
-                        <div><a href="./errfailure.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href="./sdlc.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./errfailure.html">&#8592;Previous</a></div>
+                        <div><a href="./sdlc.html">After &#8594;</a></div>
                     </div>
                     
             </div>
