--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
  
     
     <div class="middle-home">
-        <h1>Software Testing Tutorials</h1>
-      
+        <h1>SOFTWARE TESTING TUTORIALS</h1>
         <h3>This tutorial for biginners like Manual Testing Concepts, Core Java, Selenium, TestiNG and FAQ's</h3>
     </div>
     <div class="middle-line-container">
